--- a/frontpage.html
+++ b/frontpage.html
@@ -2,6 +2,8 @@
 <html>
     <header>
         <title>Our Travel Blog</title>
+         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="/CSS/frontpage.css">
     </header>
 
@@ -12,7 +14,9 @@
         <img src="https://static.thenounproject.com/png/38719-200.png">
         
         <p>Think you’re an expert traveller? Test your world knowledge with our travelling quiz!  With questions on holiday destinations, famous places to visit and sightseeing. Click below to start!</p>
-        <div class="button">Start Quiz!</div>
+         <div class="quizbtn">
+        <button type="button" class="btn btn-warning btn-lg">Start Quiz!</button>
+        </div>
     </div>
 
 <!--CONTACT US PAGE-->
@@ -31,8 +35,9 @@
         <div class="message">
           <textarea class="area" placeholder="Leave a message"></textarea>
         </div>
-
-        <div class="btn">Submit</div>
+ <div class="submitbtn">
+        <button type="button" class="btn btn-warning btn-lg">Submit</button>
+        </div>
       </div>
 
       <footer>
