--- a/Berlin.html
+++ b/Berlin.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="css/destinations.css"> 
+<link rel="stylesheet" type="text/css" href="destinations.css"> 
 </head>
 
 <div class="background">
