--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <title>Our Travel Blog</title>
-        <link rel="stylesheet" href="/CSS/frontpage.css">
+        <link rel="stylesheet" href="frontpage.css">
     </header>
 
 <body>
