--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
               
               <!--TEMPORARY NAV BAR-->
         <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="Dubai.html">Asia</a>
-      <a class="nav-item nav-link" href="#">Africa</a>
-        <a class="nav-item nav-link" href="Berlin.html">Europe</a>
-        <a class="nav-item nav-link" href="Lasvegas.html">North America</a>
+            <a class="navbar-brand" href="#">Explore</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="Dubai.html">Asia</a>
+                    <a class="nav-item nav-link" href="#">Africa</a>
+                    <a class="nav-item nav-link" href="Berlin.html">Europe</a>
+                    <a class="nav-item nav-link" href="Lasvegas.html">North America</a>
     </div>
   </div>
 </nav>
