--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
         <link rel="stylesheet" href="frontpage.css">
               
               <!--TEMPORARY NAV BAR-->
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Explore</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="Dubai.html">Asia</a>
-                    <a class="nav-item nav-link" href="#">Africa</a>
-                    <a class="nav-item nav-link" href="Berlin.html">Europe</a>
-                    <a class="nav-item nav-link" href="Lasvegas.html">North America</a>
-    </div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Our Travel Blog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Asia</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">North America</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      Explore Our Blog!
+    </span>
   </div>
 </nav>
         
