--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Asia</a>
+        <a class="nav-link" href="Dubai.html">Asia</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">North America</a>
