--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
               
               <!--TEMPORARY NAV BAR-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Our Travel Blog</a>
+  <a class="navbar-brand" href="#">Explore</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,12 +20,18 @@
       <li class="nav-item">
         <a class="nav-link" href="Dubai.html">Asia</a>
       </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Africa</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="Berlin.html">Europe</a>
+      </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">North America</a>
+        <a class="nav-link" href="Lasvegas.html">North America</a>
       </li>
     </ul>
     <span class="navbar-text">
-      Explore Our Blog!
+      Pre-lockdown memories
     </span>
   </div>
 </nav>
