--- a/Dubai.html
+++ b/Dubai.html
@@ -37,7 +37,7 @@
     <li><p>The Burj Khalifa is the worlds tallest building.</p></li>
 
     <li><p>50 years ago Dubai was a small town in the desert.</p></li>
-    <img src="images/Dubaimain.jpg" alt="profile" width=330 height=300/>
+    <img src="DUBAI IMAGES/Dubai Main Image.jpg" alt="profile" width=330 height=300/>
 
     </ul>
   </section>
@@ -55,7 +55,7 @@
         <li><p><b>The Burj Khalifa:</b> Burj Khalifa is the world's largest freestanding structure, measuring up to 2,716ft tall. It contains restaurants, a hotel and observation decks. During the evening there are building and fountain displays for entertainment.</li></p>
 
         <li><p><b>Desert Safari:</b> Desert Safari tours are full of so many activities such as quad biking, belly dancing, camel riding, sandboarding etc. There are a range of packages to choose from and all include hotel pick up so you don't have to worry about transport. There is also the option to camp or enjoy a barbeque cuisine whilst you are there.</li></p> 
-        <img src="images/Placestovisit.jpg" alt="profile" width=330 height=300/>
+        <img src="DUBAI IMAGES/Places To Visit.jpg" alt="profile" width=330 height=300/>
 
        <li><p><b>Aquaventure Waterpark:</b> This waterpark is the biggest and most popular waterpark in Dubai. It is located in the Atlantis hotel and measure up to 17 hectares. Aquaventure also holds a 700m stretch of a luxurious private sand beach.</li></p>  
 
@@ -71,7 +71,7 @@
   
     <section>
         <p>If you are a big shopper and love good food, you must visit the <a href="https://thedubaimall.com">The Dubai Mall</a>. There are a wide range of shops and restaurants available.</p>
-        <img src="images/Personalhighlight.jpg" alt="profile" width=330 height=300/>
+        <img src="DUBAI IMAGES/Personal Highlight.jpg" alt="profile" width=330 height=300/>
         
     </section>
 </article>
