--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="nav-link" href="Dubai.html">Asia</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Africa</a>
+        <a class="nav-link" href="SouthAfrica.html">Africa</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="Berlin.html">Europe</a>
