--- a/Berlin.html
+++ b/Berlin.html
@@ -56,7 +56,7 @@
         <img src="BERLIN IMAGES/Marlene Dietrich .jpg" alt="profile" width=330 height=300/> 
             <figcaption><i>Marlene Dietrich collection at the museum</i></figcaption>
 
-    <li><p><b>DDR Museuma:</b> If film history isn't your thing, perhaps you'll find the DDR Museum more interesting albeit a tad strange. At the DDR museum you can safely experience life under communism and the reality of living in East Berlin. Again, this is an unreal museum experience and unlike anything I have seen in London.</li></p>
+    <li><p><b>DDR Museum:</b> If film history isn't your thing, perhaps you'll find the DDR Museum more interesting albeit a tad strange. At the DDR museum you can safely experience life under communism and the reality of living in East Berlin. Again, this is an unreal museum experience and unlike anything I have seen in London.</li></p>
 
     <div class="videoPlayer">
         <video width="400" height="300" controls>
