--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </li>
     </ul>
     <span class="navbar-text">
-      Pre-lockdown memories
+      Pre-lockdown memories!
     </span>
   </div>
 </nav>
