--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -88,8 +88,8 @@
   </section>
 </article>
 
-<a class="button1" href= HOMEPAGE> Previous Page</a> 
-<a class="button1" href= Berlin.html> Next Page</a> 
+<a class="button1" href= "index.html"> Previous Page</a> 
+<a class="button1" href= "Berlin.html"> Next Page</a> 
 
 </body>
 </html>
