--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -8,6 +8,35 @@
 <div class="background">
 </div>
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Explore</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Dubai.html">Asia</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="SouthAfrica.html">Africa</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="Berlin.html">Europe</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Lasvegas.html">North America</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      Pre-lockdown memories!
+    </span>
+  </div>
+</nav>
+
 <body>
 
 <article class="wrapper">
