--- a/Dubai.html
+++ b/Dubai.html
@@ -76,7 +76,7 @@
     </section>
 </article>
 
-<a class="button1" href= Berlin.html> Previous Page</a> 
-<a class="button1" href= SOUTHAFRICA> NextPage</a> 
+<a class="button1" href= "Lasvegas.html"> Previous Page</a> 
+<a class="button1" href= "SouthAfrica.html"> NextPage</a> 
 </body>
 </html>
