--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -117,7 +117,7 @@
   </section>
 </article>
 
-<a class="button1" href= "index.html"> Previous Page</a> 
+<a class="button1" href= "Dubai.html"> Previous Page</a> 
 <a class="button1" href= "Berlin.html"> Next Page</a> 
 
 </body>
