--- a/Berlin.html
+++ b/Berlin.html
@@ -86,8 +86,8 @@
   </section>
 </article>
 
-<a class="button1" href= Lasvegas.html> Previous Page</a> 
-<a class="button1" href= Dubai.html> Next Page</a> 
+<a class="button1" href= "SouthAfrica.html"> Previous Page</a> 
+<a class="button1" href= "Lasvegas.html"> Next Page</a> 
 
 
 </body>
