--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -92,8 +92,8 @@
   </section>
 </article>
 
-<a class="button1" href= HOMEPAGE> Previous Page</a> 
-<a class="button1" href= Berlin.html> Next Page</a> 
+<a class="button1" href= "Berlin.html"> Previous Page</a> 
+<a class="button1" href= "index.html"> Next Page</a> 
 
 
 </body>
