Updating image links

--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -22,7 +22,7 @@
     <p>For Memorial weekend; a national holiday in North America, I visited Sin city with friends. I got to experience an oasis of glittering lights in the desert, the home of the Strip and the drive-in wedding chapel, the playground of the Mob, and a visual spectacle complete with its own Eiffel Tower, Egyptian pyramids, and Venetian canals.</p>
 
     <p>It's a place that's defined as much by vintage camp as by futuristic innovation, where the classic steakhouses and 24-hour casinos exist alongside world-class dining, sleek hotels, and thrilling entertainment. It was impossible to ever be bored.</p> 
-      <img src="images/lasvegassign.jpg" alt="profile" width=330 height=300/> 
+      <img src="Lasvegassign.jpg" alt="profile" width=330 height=300/> 
    
   </section>
 </article>
@@ -41,7 +41,7 @@
     <li><p>To make sure gamers lose complete and utter sense of time and reality, there are absolutely no clocks or windows in the gaming casinos of Las Vegas.</li></p>
     
     <li><p>There are more than 150 casinos and at least 150,000 hotel/motel rooms in the Las Vegas valley area.</li></p>
-    <img src="images/casino.jpg" alt="profile" width=330 height=300/> 
+    <img src="casino.jpg" alt="profile" width=330 height=300/> 
 
     </ul>
   </section>
@@ -57,12 +57,12 @@
     <ol>
 
     <li><p><b>The Strip:</b> The world famous Las Vegas Strip is the central artery of Sin City and the main line to a majority of the city's best sights, gambling, food and fun. With neon signs and dancing fountains along an eight-mile stretch, the Strip delivers sensory overload. Along the strip you can visit the best resorts, hotels, restaurants, casinos and entertainment offerings, such as drag queen and magic shows.Theres something for everyone.</li></p>
-    <img src="images/strip.jpg" alt="profile" width=330 height=300/> 
+    <img src="Strip.jpg" alt="profile" width=330 height=300/> 
 
     <li><p><a href="https://daylightvegas.com/">Fountains of Bellagio:</a> Water that dances like ballerinas. Cannons that shoot water hundreds of feet in the air. Yes, the fountains that span the artificial lake in front of Bellagio Las Vegas have become one of the most iconic Vegas sights. It comprises of more than 1,000 fountains in all, some shooting spray more than 450 feet into the air. The fountains go off weekdays every 30 minutes between 3 p.m. and 8 p.m., and every 15 minutes between 8 p.m. and midnight.</li></p>
   
     <li><p><b>Red Rock Canyon National Conservation Area:</b> In marked contrast to a town geared to entertainment and gaming, Red Rock offers enticements of a different nature including a 13-mile scenic drive, miles of hiking trails, rock climbing, horseback riding, mountain biking, road biking, picnic areas, nature observing and visitor center with indoor and outdoor exhibits as well as a book store.</li></p>
-    <img src="images/redrock.jpg" alt="profile" width=330 height=300/> 
+    <img src="Redrock.jpg" alt="profile" width=330 height=300/> 
 
     </ol>
   </section>
@@ -77,7 +77,7 @@
   <section>
     <p>Las Vegas is full of day parties and clubs. They are a lot like a nightclub, but with more water, less clothing and better hours. With celebrity performances and international headlining DJs, you do not want to miss out on these pool parties.</p>
 
-    <img src="images/daylight.jpg" alt="profile" width=330 height=300/> 
+    <img src="dayparty.jpg" alt="profile" width=330 height=300/> 
     <figcaption><i>Daylight Beach Club</i></figcaption>
 
     <br>
