--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -2,11 +2,43 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="destinations.css"> 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="destinations.css"> 
 </head>
 
 <div class="background">
-</div>
+  </div>
+  
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-warning">
+  <a class="navbar-brand" href="#">Explore</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Dubai.html">Asia</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="SouthAfrica.html">Africa</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="Berlin.html">Europe</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Lasvegas.html">North America</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      Pre-lockdown memories!
+    </span>
+  </div>
+</nav>
+  </header>
 
 <body>
 
