--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <title>Our Travel Blog</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="frontpage.css">
-              
-              <!--TEMPORARY NAV BAR-->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-warning">
-  <a class="navbar-brand" href="#">Explore</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Dubai.html">Asia</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="SouthAfrica.html">Africa</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="Berlin.html">Europe</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Lasvegas.html">North America</a>
-      </li>
-    </ul>
-    <span class="navbar-text">
-      Pre-lockdown memories!
-    </span>
-  </div>
-</nav>
-        
-    </header>
+        <link rel="stylesheet" href="frontpage.css"> 
+    </head>
+   
+<div class="nav-menu">
+  <nav>
+    <label class="logo">CFG Travel</label>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a class="active" href="Berlin.html">Berlin</a></li>
+      <li><a class="active" href="Dubai.html">Dubai</a></li>
+      <li><a class="active" href="Lasvegas.html">Las Vegas</a></li>
+      <li><a class="active" href="SouthAfrica.html">South Africa</a></li>
+          </ul>
+  </nav>   
+</div>
+   
+<header>
+    <section class='hero-header-text'>
+        <h1>Welcome To Our Travel Blog!</h1>
+    </section>
+</header>
 
 <body>
+<!--CONTINENT ICONS-->
+    <div class="container" style=" text-align:center;width:100%;">
+	<div class="row" style=" margin: auto;width:50%">
+		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/africa.png.png" width="120px">
+		</div>
+		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/asia.png" width="120px">
+		</div>
+		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/europe.png" width="120px">
+		</div>
+		<div class="column"style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/northamerica.png" width="120px">
+		</div>
+	</div>
+</div>
+  
     <!--QUIZ CONTAINER-->
     <div class="quiz">
         <h3>Travel Quiz</h3>
