Updating image links

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <!--CONTINENT ICONS-->
     <div class="container" style=" text-align:center;width:100%;">
 	<div class="row" style=" margin: auto;width:50%">
-		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/africa.png.png" width="120px">
+		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/africa.png.png" width="120px">
 		</div>
-		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/asia.png" width="120px">
+		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/asia.png" width="120px">
 		</div>
-		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/europe.png" width="120px">
+		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/europe.png" width="120px">
 		</div>
-		<div class="column"style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="Images/northamerica.png" width="120px">
+		<div class="column"style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/northamerica.png" width="120px">
 		</div>
 	</div>
 </div>
