--- a/index.html
+++ b/index.html
@@ -4,7 +4,122 @@
         <title>Our Travel Blog</title>
         <link rel="stylesheet" href="frontpage.css"> 
     </head>
-   
+
+<style>
+  *{
+    margin: 0;
+    padding: 0;
+  }
+	
+  nav {
+    display: flex;
+    font-family: "Arial";
+    font-weight: 300;
+    font-size: 13px;
+    outline: none;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    background-color: transparent;
+    color: white;
+  }
+
+  label.logo {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: left;
+    padding: 0 100px;
+    background-color:transparent;
+    color: white;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    margin: 0 5px;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  nav ul li a {
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 3px;
+    padding: 3px 6;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  
+  a.active, a:hover {  
+  transition: 5s;
+  }
+
+  header {
+    height: 600px;
+    width: 100%;
+    background: url("images/homepage.png");
+    overflow: hidden;
+    }
+    
+  img {
+   object-fit: cover;
+}
+
+  .column {
+    width: 100%;
+    height: 150px;
+    padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 50px;
+    background-color:black;
+    border: 6px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px 15px 10px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  body {
+  background-color: rgb(0, 0, 0);
+  }
+
+  h1 { 
+  padding: 60px;
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  margin-left: 2em;
+  margin-right: 2em;
+  }
+
+  button {
+color:black;
+text-transform: uppercase;
+font-weight: bold;
+background: #F2C94C;
+padding: 8px;
+border-radius: 2px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
+}
+	
+</style>
+</head>
+<body>
 <div class="nav-menu">
   <nav>
     <label class="logo">CFG Travel</label>
@@ -17,16 +132,14 @@
           </ul>
   </nav>   
 </div>
-   
+​
 <header>
-    <section class='hero-header-text'>
-        <h1>Welcome To Our Travel Blog!</h1>
-    </section>
+  <section class='hero-header-text'>
+     <h1>Welcome To Our Travel Blog</h1>
+  </section>
 </header>
-
-<body>
-<!--CONTINENT ICONS-->
-    <div class="container" style=" text-align:center;width:100%;">
+​
+<div class="container" style=" text-align:center;width:100%;">
 	<div class="row" style=" margin: auto;width:50%">
 		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/africa.png.png" width="120px">
 		</div>
@@ -38,7 +151,7 @@
 		</div>
 	</div>
 </div>
-  
+   
     <!--QUIZ CONTAINER-->
     <div class="quiz">
         <h3>Travel Quiz</h3>
