--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -116,7 +116,7 @@
 <p>Some of my favourties were Daylight, Drais and Marquee. Check out a sneek peek below of when I visited <a href="https://daylightvegas.com/">Daylight</a> below:</p>
     <div class="videoPlayer">
       <video width="400" height="300" controls>
-      <source src="images/IMG_3152.m4v" type="video/mp4">
+      <source src="IMG_3152.m4v" type="video/mp4">
       Your browser does not support the mp4 videos.
         </video>
         </div>
