--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Our Travel Blog</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="frontpage.css"> 
     </head>
 
@@ -13,7 +14,7 @@
 	
   nav {
     display: flex;
-    font-family: "Arial";
+    font-family: 'Roboto', 'sans-serif';
     font-weight: 300;
     font-size: 13px;
     outline: none;
@@ -93,7 +94,9 @@
   }
   
   body {
-  background-color: rgb(0, 0, 0);
+	  background-color: rgb(0, 0, 0);
+	  border-radius: 8px;
+	  box-sizing: border-box;
   }
 
   h1 { 
@@ -119,6 +122,7 @@ transition: all 0.4s ease 0s;
 	
 </style>
 </head>
+
 <body>
 <div class="nav-menu">
   <nav>
@@ -139,7 +143,7 @@ transition: all 0.4s ease 0s;
   </section>
 </header>
 ​
-<div class="container" style=" text-align:center;width:100%;">
+<div class="container" style="text-align:center;width:80%;">
 	<div class="row" style=" margin: auto;width:50%">
 		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/africa.png.png" width="120px">
 		</div>
