--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
   
   body {
 	  background-color: rgb(0, 0, 0);
-	  border-radius: 8px;
+	  border-radius: 10px;
 	  box-sizing: border-box;
+	  height: 150px;
   }
 
   h1 { 
@@ -109,15 +110,15 @@
   }
 
   button {
-color:black;
-text-transform: uppercase;
-font-weight: bold;
-background: #F2C94C;
-padding: 8px;
-border-radius: 2px;
-display: inline-block;
-border: none;
-transition: all 0.4s ease 0s;
+	  color:black;
+	  text-transform: uppercase;
+	  font-weight: bold;
+	  background: #F2C94C;
+	  padding: 8px;
+	  border-radius: 2px;
+	  display: inline-block;
+	  border: none;
+	  transition: all 0.4s ease 0s;
 }
 	
 </style>
@@ -144,7 +145,7 @@ transition: all 0.4s ease 0s;
 </header>
 ​
 <div class="container" style="text-align:center;width:80%;">
-	<div class="row" style=" margin: auto;width:50%">
+	<div class="row" style=" margin: auto;width:40%">
 		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/africa.png.png" width="120px">
 		</div>
 		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/asia.png" width="120px">
