--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   header {
     height: 600px;
     width: 100%;
-    background: url("images/homepage.png");
+    background: url("homepage images/Homepage.png");
     overflow: hidden;
     }
     
