--- a/index.html
+++ b/index.html
@@ -72,18 +72,15 @@
 }
 
   .column {
-    width: 100%;
+    width: 25%;
     height: 150px;
-    padding-top: 50px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 50px;
+    padding: 10px 50px;
     background-color:black;
     border: 6px solid black;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px 15px 10px 15px;
-    display: flex;
+    float: left;
     align-items: center;
     justify-content: center;
     }
@@ -138,13 +135,13 @@
           </ul>
   </nav>   
 </div>
-​
+	
 <header>
   <section class='hero-header-text'>
      <h1>Welcome To Our Travel Blog</h1>
   </section>
 </header>
-​
+	
 <div class="container" style="text-align:center;width:80%;">
 	<div class="row" style=" margin: auto;width:40%">
 		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/africa.png.png" width="120px">
