--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 }
 
   .column {
-    width: 25%;
+    width: 30%;
     height: 150px;
     padding: 10px 50px;
     background-color:black;
@@ -80,7 +80,7 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px 15px 10px 15px;
-    float: left;
+    display: flex;
     align-items: center;
     justify-content: center;
     }
@@ -95,7 +95,6 @@
 	  background-color: rgb(0, 0, 0);
 	  border-radius: 10px;
 	  box-sizing: border-box;
-	  height: 150px;
   }
 
   h1 { 
