--- a/Berlin.html
+++ b/Berlin.html
@@ -119,7 +119,7 @@
 </article>
 
 <a class="button1" href= "SouthAfrica.html"> Previous Page</a> 
-<a class="button2" href= "Lasvegas.html"> Next Page</a> 
+<a class="button2" href= "Dubai.html"> Next Page</a> 
 
 
 </body>
