--- a/Dubai.html
+++ b/Dubai.html
@@ -108,7 +108,7 @@
     </section>
 </article>
 
-<a class="button1" href= "index.html"> Previous Page</a> 
-<a class="button2" href= "SouthAfrica.html"> NextPage</a> 
+<a class="button1" href= "berlin.html"> Previous Page</a> 
+<a class="button2" href= "lasvegas.html"> NextPage</a> 
 </body>
 </html>
