--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -124,8 +124,8 @@
   </section>
 </article>
 
-<a class="button1" href= "Berlin.html"> Previous Page</a> 
-<a class="button2" href= "index.html"> Next Page</a> 
+<a class="button1" href= "dubai.html"> Previous Page</a> 
+<a class="button2" href= "southafrica.html"> Next Page</a> 
 
 
 </body>
