--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -120,7 +120,7 @@
   </section>
 </article>
 
-<a class="button1" href= "lasvegas.html"> Previous Page</a> 
+<a class="button1" href= "Lasvegas.html"> Previous Page</a> 
 <a class="button2" href= "Berlin.html"> Next Page</a> 
 
 </body>
