--- a/Dubai.html
+++ b/Dubai.html
@@ -45,7 +45,7 @@
 <article class="wrapper">
   <header>
     <h1 class="pageTitle">Dubai - United Arab Emirates</h1>
-    <h2 class="pageSubTitle"> A Recap on The City of Gold</h2>
+    <h2 class="pageSubTitle"> August 2019, A Recap on The City of Gold</h2>
     <h3 class="name"><i>By Ashleigh</i></h3>
 </header>
 
