--- a/Dubai.html
+++ b/Dubai.html
@@ -109,6 +109,6 @@
 </article>
 
 <a class="button1" href= "berlin.html"> Previous Page</a> 
-<a class="button2" href= "LasVegas.html"> Next Page</a> 
+<a class="button2" href= "Lasvegas.html"> Next Page</a> 
 </body>
 </html>
