--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -10,33 +10,18 @@
 </div>
   
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-warning">
-  <a class="navbar-brand" href="#">Explore</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Dubai.html">Asia</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="SouthAfrica.html">Africa</a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" href="Berlin.html">Europe</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Lasvegas.html">North America</a>
-      </li>
-    </ul>
-    <span class="navbar-text">
-      Pre-lockdown memories!
-    </span>
-  </div>
+   <div class="nav-menu">
+  <nav>
+    <label class="logo">CFG Travel</label>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a class="active" href="Berlin.html">Berlin</a></li>
+      <li><a class="active" href="Dubai.html">Dubai</a></li>
+      <li><a class="active" href="Lasvegas.html">Las Vegas</a></li>
+      <li><a class="active" href="SouthAfrica.html">South Africa</a></li>
+          </ul>
+  </nav>   
+</div>
 </nav>
   </header>
 
