--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	
 <header>
   <section class='hero-header-text'>
-     <h1>Welcome To Our Travel Blog</h1>
+     <h1>Welcome To The CFG Travel Blog</h1>
   </section>
 </header>
 	
