--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -30,7 +30,7 @@
 <article class="wrapper">
   <header>
     <h1 class="pageTitle">South Africa - Africa</h1>
-    <h2 class="pageSubTitle">January 2020</h2>
+    <h2 class="pageSubTitle">January 2020, My Time Visitng The Rainbow Nation</h2>
     <h3 class="name"><i>By Jemima</i></h3>
     
   </header>
