--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
 </div>
 	
 <header>
-  <section class='hero-header-text'>
-     <h1>Welcome To The CFG Travel Blog</h1>
+ <section class="hero-header-text" style="position: relative;top: 25%;">
+    <h1>Welcome To Our Travel Blog</h1>
   </section>
 </header>
+	
 	
 <div class="container" style="text-align:center;width:80%;">
 	<div class="row" style=" margin: auto;width:40%">
