--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -5,6 +5,60 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="destinations.css"> 
 </head>
+  
+    
+  <style>
+  *{
+    margin: 0;
+    padding: 0;
+  }
+
+  label.logo {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: left;
+    padding: 0 100px;
+    background-color:transparent;
+    color: white;
+  }
+	
+   nav {
+    display: flex;
+    font-family: 'Roboto', 'sans-serif';
+    font-weight: 300;
+    font-size: 13px;
+    outline: none;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    background-color: black;
+    color: white;
+  }
+  nav ul li {
+    display: inline-block;
+    margin: 0 5px;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  nav ul li a {
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 3px;
+    padding: 3px 6;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  
+  a.active, a:hover {  
+  transition: 5s;
+  }
+  </style>
 
 <div class="background">
 </div>
