--- a/Dubai.html
+++ b/Dubai.html
@@ -18,7 +18,7 @@
     font-weight: bold;
     text-align: left;
     padding: 0 100px;
-    background-color:transparent;
+    background-color:black;
     color: white;
   }
 	
@@ -33,7 +33,7 @@
     align-items: center;
     height: 80px;
     width: 100%;
-    background-color: transparent;
+    background-color: black;
     color: white;
   }
   nav ul li {
