--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -16,7 +16,7 @@
     font-weight: bold;
     text-align: left;
     padding: 0 100px;
-    background-color:transparent;
+    background-color: black;
     color: white;
   }
 	
@@ -31,7 +31,7 @@
     align-items: center;
     height: 80px;
     width: 100%;
-    background-color: transparent;
+    background-color: black;
     color: white;
   }
   nav ul li {
@@ -160,8 +160,8 @@
   </section>
 </article>
 
-<a class="button1" href= "dubai.html"> Previous Page</a> 
-<a class="button2" href= "southafrica.html"> Next Page</a> 
+<a class="button1" href= "Dubai.html"> Previous Page</a> 
+<a class="button2" href= "SouthAfrica.html"> Next Page</a> 
 
 
 </body>
