--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
 		</div>
 	</div>
 </div>
+
+<div class="aboutus">
+	<h3>About Us</h3>
+        <img src="">
+        <p>Four coding girls from the UK sharing our travel experiences and giving you a insight on different locations. We love travelling, meeting new people and trying new foods. We are here to share our adventures with you!</p>
+    </div>
+
    
     <!--QUIZ CONTAINER-->
     <div class="quiz">
