--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	
 <header>
  <section class="hero-header-text" style="position: relative;top: 25%;">
-    <h1>Welcome To Our Travel Blog</h1>
+    <h1>Welcome To Our Travel Blog!</h1>
   </section>
 </header>
 	
@@ -155,7 +155,7 @@
 </div>
 
 <!--ABOUT US-->
-	<div class= "aboutus">
+	<div class="about">
 		<h3>About Us</h3>
         	<img src="Travel.jpg">
         	<p>Four coding girls from the UK sharing our travel experiences and giving you a insight on different locations. We love travelling, meeting new people and trying new foods. We are here to share our adventures with you!</p>
