--- a/index.html
+++ b/index.html
@@ -142,16 +142,7 @@
 	
 	
 <div class="container" style="text-align:center;width:80%;">
-	<div class="row" style=" margin: auto;width:40%">
-		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/africa.png.png" width="120px">
-		</div>
-		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/asia.png" width="120px">
-		</div>
-		<div class="column" style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/europe.png" width="120px">
-		</div>
-		<div class="column"style="float: left;background-color:#F2C94C;width:120px;display:block;"><img src="homepage images/northamerica.png" width="120px">
-		</div>
-	</div>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7568.305696985824!2d13.376450918478096!3d52.50918923477839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smuseums!5e0!3m2!1sen!2suk!4v1593622463054!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 
 <!--ABOUT US-->
