--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Our Travel Blog</title>
+        <title>CFG Travel Blog</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="frontpage.css"> 
@@ -136,7 +136,7 @@
 	
 <header>
  <section class="hero-header-text" style="position: relative;top: 25%;">
-    <h1>Welcome To Our Travel Blog!</h1>
+    <h1>Welcome To The CFG Travel Blog!</h1>
   </section>
 </header>
 	
