--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <!--ABOUT US-->
 	<div class="about">
-		<h3>About Us</h3>
+		<h3><u>About Us</u></h3>
         	<img src="Travel.jpg">
         	<p>Four coding girls from the UK sharing our travel experiences and giving you a insight on different locations. We love travelling, meeting new people and trying new foods. We are here to share our adventures with you!</p>
    	</div>
@@ -155,7 +155,7 @@
 	
     <!--QUIZ CONTAINER-->
     <div class="quiz">
-        <h3>Travel Quiz</h3>
+	    <h3><u>Travel Quiz</u></h3>
         <img src="https://static.thenounproject.com/png/38719-200.png">
         
         <p>Think you’re an expert traveller? Test your world knowledge with our travelling quiz!  With questions on holiday destinations, famous places to visit and sightseeing. Click below to start!</p>
@@ -166,7 +166,7 @@
 
 <!--CONTACT US PAGE-->
     <div class="container">
-        <p>Contact US</p>
+	    <p><u>Contact US</u></p>
         <br>
         <div class="login">
           <input type="text" class="input" placeholder="First Name">
