--- a/index.html
+++ b/index.html
@@ -148,10 +148,6 @@
         	<img src="Travel.jpg">
         	<p>Four coding girls from the UK sharing our travel experiences and giving you a insight on different locations. We love travelling, meeting new people and trying new foods. We are here to share our adventures with you!</p>
    	</div>
-
-   <div class="container" style="text-align:center;width:80%;">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7568.305696985824!2d13.376450918478096!3d52.50918923477839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smuseums!5e0!3m2!1sen!2suk!4v1593622463054!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</div>
 	
     <!--QUIZ CONTAINER-->
     <div class="quiz">
@@ -163,6 +159,11 @@
         <button type="button" class="btn btn-warning btn-lg">Start Quiz!</button>
         </div>
     </div>
+	
+	<!--MAP-->
+	  <div class="container" style="text-align:center;width:80%;">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7568.305696985824!2d13.376450918478096!3d52.50918923477839!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smuseums!5e0!3m2!1sen!2suk!4v1593622463054!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
 
 <!--CONTACT US PAGE-->
     <div class="container">
