--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	<div class="about">
 		<h3><u>About Us</u></h3>
         	<img src="Travel.jpg">
-        	<p>We are four coding girls from the UK sharing our travel experiences and giving you a insight on different locations we have visited around the globe. We love travelling, meeting new people and trying new cuisines.</p>
+        	<p>Hey there! We are four coding girls from the UK sharing our travel experiences and giving you a insight on different locations we have visited around the globe. We love travelling, meeting new people and trying new cuisines.</p>
 		<p> We are here to share our adventures with you on this blog!</p>
    	</div>
 	
