--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </div>
 
       <footer>
-        <p>A CodeFirstGirls Project &copy</p>
+        <p>CodeFirstGirlsProject &copy</p>
       </footer>
 </body>
 </html>
